--- a/blocks/product-details/product-details.css
+++ b/blocks/product-details/product-details.css
@@ -4,6 +4,12 @@
   grid-column-gap: var(--grid-1-gutters);
   margin-top: var(--spacing-medium);
 }
+.product-brand {
+  font-size: 14px;
+  font-weight: 500;
+  color: #333;
+  margin-top: 4px;
+}
 
 .product-details__left-column {
   display: none;
